make grid spacing more fixed

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,8 @@ VisualFS plugin CSS
 }
 
 .visualfs-item {
+  width: calc(var(--visualfs-width) + 20px);
+  height: calc(var(--visualfs-height) + 10px);
   display: flex;
   flex-direction: column;
   align-items: center;
